# websocketinspector

./: .prettierrc.json  README.md  package.json
.github/workflows/: main.yml
public/: index.html  manifest.json
src/: AlertDialog.tsx  App.css  App.js  App.module.css  App.test.tsx  App.tsx  Client.tsx  ClientInfo.css  ClientInfo.module.css  ClientInfo.tsx  ClientList.module.css  ClientList.tsx  ClientMessages.module.css  ClientMessages.tsx  CloseDialog.tsx  LogLegend.tsx  LoggingEvents.module.css  LoggingEvents.tsx  LoggingList.module.css  LoggingList.tsx  MessageFormat.tsx  Scroll.module.css  ServerBackdrop.module.css  ServerBackdrop.tsx  ServerForm.css  ServerForm.module.css  ServerForm.tsx  ServerStatus.tsx  SimpleList.module.css  SimpleList.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  server.rs
src/app/: hooks.ts  store.ts
src/features/: WebsocketListener.tsx  alertDialogSlice.ts  messageFormatSlice.ts  uiSlice.ts  websocketSlice.ts
