[package]
name = "websocketinspector"
version = "0.1.0"
description = "WebSocket Inspector"
authors = ["you"]
license = ""
repository = ""
default-run = "websocketinspector"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["clipboard-write-text"] }
tokio = { version = "1.25.0", features = ["full"] }
warp = "0.3.3"
futures-util = "0.3.25"
thiserror = "1.0.40"
log = "0.4.19"
env_logger = "0.10.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
